[tool.poetry]
name = "tetris-"
version = "0.1.0"
description = "Tetris game made with arcade"
authors = ["mariamxxo25@gmail.com", "ljllacuna5@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
